--- a/Example/CurrencyFormatter/Base.lproj/Main.storyboard
+++ b/Example/CurrencyFormatter/Base.lproj/Main.storyboard
@@ -34,14 +34,55 @@
                                     <outlet property="delegate" destination="vXZ-lx-hvc" id="ETb-hg-aks"/>
                                 </connections>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3p7-YG-FHf">
+                                <rect key="frame" x="16" y="96" width="343" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="o1H-dY-vTd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jOt-l7-O4g">
+                                <rect key="frame" x="16" y="125" width="343" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="bvo-BV-zOc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r2K-Ii-nU6">
+                                <rect key="frame" x="16" y="154" width="343" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="NlZ-Ww-fVt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="3p7-YG-FHf" secondAttribute="trailing" constant="16" id="5lu-kz-vTa"/>
+                            <constraint firstItem="3p7-YG-FHf" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="Eqf-Ll-jDK"/>
+                            <constraint firstAttribute="trailing" secondItem="jOt-l7-O4g" secondAttribute="trailing" constant="16" id="VzQ-8h-4YD"/>
+                            <constraint firstItem="jOt-l7-O4g" firstAttribute="top" secondItem="3p7-YG-FHf" secondAttribute="bottom" constant="8" id="a11-L0-BH3"/>
                             <constraint firstAttribute="trailing" secondItem="jyK-RM-rYI" secondAttribute="trailing" constant="16" id="aVH-0T-Oje"/>
+                            <constraint firstItem="jOt-l7-O4g" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="d3V-eI-BMD"/>
+                            <constraint firstAttribute="trailing" secondItem="r2K-Ii-nU6" secondAttribute="trailing" constant="16" id="nFP-oA-sSc"/>
+                            <constraint firstItem="r2K-Ii-nU6" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="nGF-Ul-Kqq"/>
                             <constraint firstItem="jyK-RM-rYI" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="quY-Ub-i2w"/>
+                            <constraint firstItem="r2K-Ii-nU6" firstAttribute="top" secondItem="jOt-l7-O4g" secondAttribute="bottom" constant="8" id="rpT-LS-cet"/>
+                            <constraint firstItem="3p7-YG-FHf" firstAttribute="top" secondItem="jyK-RM-rYI" secondAttribute="bottom" constant="8" id="x4g-To-K2k"/>
                             <constraint firstItem="jyK-RM-rYI" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" id="xSU-4M-Y0k"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="lblDecimal" destination="jOt-l7-O4g" id="tbw-Ur-dUO"/>
+                        <outlet property="lblInteger" destination="3p7-YG-FHf" id="Ehd-Y9-Rvd"/>
+                        <outlet property="lblString" destination="r2K-Ii-nU6" id="5t4-uY-5o0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
